plugins/kotlin/jvm/k2/testData/scratch/unresolved.output
Compilation failed: unresolved.kts:1:1: error: unresolved reference 'foo'.
foo()
^

